// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<avatar> demo: > render [basic] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 24px; row-gap: 24px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-avatar sd-avatar-circle"><span class="sd-avatar-text">A</span>
      <!--v-if-->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-avatar sd-avatar-circle sd:bg-[#3370ff]"><span class="sd-avatar-text"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-user" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 37c0-4.97 4.03-8 9-8h16c4.97 0 9 3.03 9 8v3a1 1 0 0 1-1 1H8a1 1 0 0 1-1-1z"></path><circle cx="24" cy="15" r="8"></circle></svg></span>
      <!--v-if-->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-avatar sd-avatar-circle sd:bg-[#14a9f8]"><span class="sd-avatar-text">SD</span>
      <!--v-if-->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-avatar sd-avatar-circle sd:bg-[#00d0b6]"><span class="sd-avatar-text">Design</span>
      <!--v-if-->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-avatar sd-avatar-circle"><span class="sd-avatar-text"><img alt="avatar" src="https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9.png~tplv-uwbnlip3yd-webp.webp"></span>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`<avatar> demo: > render [fit] correctly 1`] = `
<div class="sd-avatar sd-avatar-circle sd:mr-6 sd:align-middle sd:bg-[#14a9f8]"><span class="sd-avatar-text">B</span>
  <!--v-if-->
</div>
<button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd:align-middle" type="button">
  <!--v-if--> Change
</button>
`;

exports[`<avatar> demo: > render [group] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 32px; row-gap: 32px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-avatar-group ">
      <div style="z-index: 6; margin-left: -10px;" class="sd-avatar sd-avatar-circle sd:bg-[#7bc616]"><span class="sd-avatar-text">A</span>
        <!--v-if-->
      </div>
      <div style="z-index: 6; margin-left: -10px;" class="sd-avatar sd-avatar-circle sd:bg-[#14c9c9]"><span class="sd-avatar-text">B</span>
        <!--v-if-->
      </div>
      <div style="z-index: 6; margin-left: -10px;" class="sd-avatar sd-avatar-circle sd:bg-[#168cff]"><span class="sd-avatar-text">C</span>
        <!--v-if-->
      </div>
      <div style="z-index: 6; margin-left: -10px;" class="sd-avatar sd-avatar-circle sd:bg-[#ff7d00]"><span class="sd-avatar-text">SD</span>
        <!--v-if-->
      </div>
      <div style="z-index: 6; margin-left: -10px;" class="sd-avatar sd-avatar-circle sd:bg-[#ffc72e]"><span class="sd-avatar-text">Design</span>
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-avatar-group ">
      <div style="width: 24px; height: 24px; font-size: 12px; z-index: 6; margin-left: -6px;" class="sd-avatar sd-avatar-circle sd:bg-[#7bc616]"><span class="sd-avatar-text">A</span>
        <!--v-if-->
      </div>
      <div style="width: 24px; height: 24px; font-size: 12px; z-index: 6; margin-left: -6px;" class="sd-avatar sd-avatar-circle sd:bg-[#14c9c9]"><span class="sd-avatar-text">B</span>
        <!--v-if-->
      </div>
      <div style="width: 24px; height: 24px; font-size: 12px; z-index: 6; margin-left: -6px;" class="sd-avatar sd-avatar-circle sd:bg-[#168cff]"><span class="sd-avatar-text">C</span>
        <!--v-if-->
      </div>
      <div style="width: 24px; height: 24px; font-size: 12px; z-index: 6; margin-left: -6px;" class="sd-avatar sd-avatar-circle sd:bg-[#ff7d00]"><span class="sd-avatar-text">SD</span>
        <!--v-if-->
      </div>
      <div style="width: 24px; height: 24px; font-size: 12px; z-index: 6; margin-left: -6px;" class="sd-avatar sd-avatar-circle sd:bg-[#ffc72e]"><span class="sd-avatar-text">Design</span>
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-avatar-group ">
      <div style="width: 24px; height: 24px; font-size: 12px; z-index: 6; margin-left: -6px;" class="sd-avatar sd-avatar-circle sd:bg-[#7bc616]"><span class="sd-avatar-text">A</span>
        <!--v-if-->
      </div>
      <div style="width: 24px; height: 24px; font-size: 12px; z-index: 6; margin-left: -6px;" class="sd-avatar sd-avatar-circle sd:bg-[#14c9c9]"><span class="sd-avatar-text">B</span>
        <!--v-if-->
      </div>
      <div style="width: 24px; height: 24px; font-size: 12px; z-index: 6; margin-left: -6px;" class="sd-avatar sd-avatar-circle sd:bg-[#168cff]"><span class="sd-avatar-text">C</span>
        <!--v-if-->
      </div>
      <div style="width: 24px; height: 24px; font-size: 12px; z-index: 6; margin-left: -6px;" class="sd-avatar sd-avatar-circle sd-avatar-group-max-count-avatar"><span class="sd-avatar-text">+2</span>
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`<avatar> demo: > render [icon] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 24px; row-gap: 24px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-avatar sd-avatar-circle sd-avatar-with-trigger-icon sd:bg-[#168cff]"><span class="sd-avatar-text"> A </span>
      <div class="sd-avatar-trigger-icon-button" style="color: rgb(52, 145, 250);"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-camera" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="m33 12-1.862-3.724A.5.5 0 0 0 30.691 8H17.309a.5.5 0 0 0-.447.276L15 12m16 14a7 7 0 1 1-14 0 7 7 0 0 1 14 0ZM7 40h34a1 1 0 0 0 1-1V13a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v26a1 1 0 0 0 1 1Z"></path>
        </svg></div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-avatar sd-avatar-circle sd-avatar-with-trigger-icon sd:bg-[#14c9c9]"><span class="sd-avatar-text"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-user" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 37c0-4.97 4.03-8 9-8h16c4.97 0 9 3.03 9 8v3a1 1 0 0 1-1 1H8a1 1 0 0 1-1-1z"></path><circle cx="24" cy="15" r="8"></circle></svg></span>
      <div class="sd-avatar-trigger-icon-button"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-edit" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="m30.48 19.038 5.733-5.734a1 1 0 0 0 0-1.414l-5.586-5.586a1 1 0 0 0-1.414 0l-5.734 5.734m7 7L15.763 33.754a1 1 0 0 1-.59.286l-6.048.708a1 1 0 0 1-1.113-1.069l.477-6.31a1 1 0 0 1 .29-.631l14.7-14.7m7 7-7-7M6 42h36"></path>
        </svg></div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-avatar sd-avatar-square sd-avatar-with-trigger-icon sd:bg-[#ffc72e]"><span class="sd-avatar-text"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-user" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 37c0-4.97 4.03-8 9-8h16c4.97 0 9 3.03 9 8v3a1 1 0 0 1-1 1H8a1 1 0 0 1-1-1z"></path><circle cx="24" cy="15" r="8"></circle></svg></span>
      <div class="sd-avatar-trigger-icon-button"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-edit" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="m30.48 19.038 5.733-5.734a1 1 0 0 0 0-1.414l-5.586-5.586a1 1 0 0 0-1.414 0l-5.734 5.734m7 7L15.763 33.754a1 1 0 0 1-.59.286l-6.048.708a1 1 0 0 1-1.113-1.069l.477-6.31a1 1 0 0 1 .29-.631l14.7-14.7m7 7-7-7M6 42h36"></path>
        </svg></div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-avatar sd-avatar-circle sd-avatar-with-trigger-icon"><span class="sd-avatar-text"><img alt="avatar" src="https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9.png~tplv-uwbnlip3yd-webp.webp"></span>
      <div class="sd-avatar-trigger-icon-mask"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-edit" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="m30.48 19.038 5.733-5.734a1 1 0 0 0 0-1.414l-5.586-5.586a1 1 0 0 0-1.414 0l-5.734 5.734m7 7L15.763 33.754a1 1 0 0 1-.59.286l-6.048.708a1 1 0 0 1-1.113-1.069l.477-6.31a1 1 0 0 1 .29-.631l14.7-14.7m7 7-7-7M6 42h36"></path>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`<avatar> demo: > render [image-url] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 24px; row-gap: 24px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-avatar sd-avatar-circle"><span class="sd-avatar-image"><!--v-if--><div class="sd-avatar-image-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-loading" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"></path></svg></div><img src="https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9.png~tplv-uwbnlip3yd-webp.webp" alt="avatar"></span>
      <!--v-if-->
    </div>
  </div>
  <!---->
  <div class="sd-space-item"> 加载失败: </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-avatar sd-avatar-circle"><span class="sd-avatar-image"><!--v-if--><div class="sd-avatar-image-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-loading" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"></path></svg></div><img src="https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9123.png~tplv-uwbnlip3yd-webp.webp" alt="avatar"></span>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`<avatar> demo: > render [size] correctly 1`] = `
<div class="sd-space sd-space-vertical" style="column-gap: 24px; row-gap: 24px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 24px; row-gap: 24px;">
      <!---->
      <div class="sd-space-item">
        <div style="width: 64px; height: 64px; font-size: 32px;" class="sd-avatar sd-avatar-circle"><span class="sd-avatar-text">SD</span>
          <!--v-if-->
        </div>
      </div>
      <!---->
      <div class="sd-space-item">
        <div style="width: 40px; height: 40px; font-size: 20px;" class="sd-avatar sd-avatar-circle"><span class="sd-avatar-text">SD</span>
          <!--v-if-->
        </div>
      </div>
      <!---->
      <div class="sd-space-item">
        <div style="width: 32px; height: 32px; font-size: 16px;" class="sd-avatar sd-avatar-circle"><span class="sd-avatar-text">SD</span>
          <!--v-if-->
        </div>
      </div>
      <!---->
      <div class="sd-space-item">
        <div style="width: 24px; height: 24px; font-size: 12px;" class="sd-avatar sd-avatar-circle"><span class="sd-avatar-text">SD</span>
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 24px; row-gap: 24px;">
      <!---->
      <div class="sd-space-item">
        <div style="width: 64px; height: 64px; font-size: 32px;" class="sd-avatar sd-avatar-square"><span class="sd-avatar-text">SD</span>
          <!--v-if-->
        </div>
      </div>
      <!---->
      <div class="sd-space-item">
        <div style="width: 40px; height: 40px; font-size: 20px;" class="sd-avatar sd-avatar-square"><span class="sd-avatar-text">SD</span>
          <!--v-if-->
        </div>
      </div>
      <!---->
      <div class="sd-space-item">
        <div style="width: 32px; height: 32px; font-size: 16px;" class="sd-avatar sd-avatar-square"><span class="sd-avatar-text">SD</span>
          <!--v-if-->
        </div>
      </div>
      <!---->
      <div class="sd-space-item">
        <div style="width: 24px; height: 24px; font-size: 12px;" class="sd-avatar sd-avatar-square"><span class="sd-avatar-text">SD</span>
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
</div>
`;
